Finished All Dtos except the SubCases

--- a/FreelanceProject/appsettings.json
+++ b/FreelanceProject/appsettings.json
@@ -6,6 +6,10 @@
     }
   },
   "AllowedHosts": "*",
+  "ImageFilters": {
+    "MaxSize": 2000000,
+    "AllowedExtensions": [ ".png", ".jpg", ".jpeg" ],
+  },
   "ConnectionStrings": {
     "MedicalUrl": "Server=.;Database=MedicalDB;trusted_Connection=true;Encrypt=false"
   }
