--- a/FreelanceProject/appsettings.json
+++ b/FreelanceProject/appsettings.json
@@ -7,6 +7,12 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MedicalUrl": "Server=.;Database=MedicalDB;trusted_Connection=true;Encrypt=false"
+    "DefaultConnection": "Server=.;Database=MedicalDB;trusted_Connection=true;Encrypt=false"
+  },
+  "JWT": {
+    "Key": "CffmG/fkYL6yNbB7oUWRc/NGMEp1QTzCNWzm/v4LRks=",
+    "Issuer": "SecureApi",
+    "Audience": "SecureApiUser",
+    "DurationInDay": 30
   }
 }
